--- a/styles/header.css
+++ b/styles/header.css
@@ -3,8 +3,10 @@ html, body{
   background-color: 000;
   margin: 0;
   padding: 0;
-  overflow: hidden;
   background-color: #000;
+  overflow-y: auto;
+  overflow-x: hidden;
+  overflow : -moz-scrollbars-horizontal;
 }
 .header_container{
   width: 100vw;
